--- a/uts.html
+++ b/uts.html
@@ -1,46 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;900&display=swap" rel="stylesheet">
-    <title>UTS PROMNET</title>
-</head>
-<body>
-    <nav>
-        <div class="navigasi">
-            <div class="logo">
-                <a href="">Syifa Raudhatul</a>
-            </div>
-            <div class="menu">
-                <ul>
-                    <li><a href="#Home">Home</a></li>
-                    <li><a href="#About">About</a></li>
-                    <li><a href="#Work">Work</a></li>
-                    <li><a href="#Contact">Contact</a></li>
-                </ul>
-            </div>  
-        </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&family=Inter&family=Montserrat:wght@400;500&display=swap" rel="stylesheet" />
+
+    <title>UTS</title>
+
+
+  </head>
+  <body>
+    <nav class="nav">
+      <div class="nav-title">
+        <h1><a href="#home"></a>Syifa Raudhatul J</h1>
+      </div>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#work">Work</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
     </nav>
-    <div class="home" id="Home">
-        <h1>Hi! I am </h1>
-        <h2>Syifa Raudhatul Jannah, S.Pd</h2>
-        <p>I am a bachelor of education.</p>
-        <div class="button">
-            <a href="resume.pdf" style="text-decoration: none;">
-                <button>Resume</button>
-            </a>
+    <section class="pagehome" id="home">
+      <div class="div-home">
+        <h2 class="hi">Hi! I am</h2>
+        <h2 class="myname">Syifa Raudhatul Jannah</h2>
+        <h3 class="myprofil">I am a student of the Indonesian University of Education</h3>
+        <button class="btn-home" type="button"><a class="a-home" href="#about">Resume</a></button>
+      </div>
+    </section>
+    <section class="pageabout" id="about">
+      <div class="moreinfo">
+        <p>More info</p>
+        <img style="width: 200px" src="panah.png" alt="panah" />
+      </div>
+      <div class="div-about">
+        <h1 class="h1-about">About</h1>
+        <p class="div-p">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, esse dolore animi temporibus id enim odit unde deleniti doloribus vero quis porro sapiente neque. Perferendis autem explicabo eligendi possimus veniam quia recusandae
+          tempore, magni commodi voluptatem ipsum, dolorum labore sit quae. Modi magnam velit asperiores! Reprehenderit hic aspernatur nulla architecto.
+        </p>
+      </div>
+      <div class="div-editor">
+        <div class="editor1">
+          <h2 class="div-editor-h2">HIMA</h2>
+          <p class="div-editor-p">Integrated (2022-Now)</p>
         </div>
-    </div>
-    <div class="about" id="About">
-        <p class="about">More Info</p>
-        <h1 class="about">About</h1>
-        <p class="about"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore deleniti aliquam tenetur nostrum cumque? Consectetur, reprehenderit reiciendis?</p>
-        <h2 class="about"> Editor Jurnal</h2>
-        <p class="about"> Integrated (2022-now) </p>
-    </div>
-</body>
+        <button class="btn-about" type="button">Less Info</button>
+      </div>
+      <div>
+        <p class="p-editor">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus ullam eius, iure facere tempora consequatur porro laudantium, tempore veniam minima placeat expedita vel accusantium provident, eum architecto reprehenderit
+          autem hic!
+        </p>
+      </div>
+      <div class="div-editor">
+        <div class="editor1">
+          <h2 class="div-editor-h2">Isola</h2>
+          <p class="div-editor-p">Integrated (2019-Now)</p>
+        </div>
+        <button class="btn-about" type="button">Less Info</button>
+      </div>
+      <div>
+        <p class="p-editor">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus ullam eius, iure facere tempora consequatur porro laudantium, tempore veniam minima placeat expedita vel accusantium provident, eum architecto reprehenderit
+          autem hic!
+        </p>
+      </div>
+      <div class="div-editor">
+        <div class="editor1">
+          <h2 class="div-editor-h2">Kubus</h2>
+          <p class="div-editor-p">Integrated (2020-now)</p>
+        </div>
+        <button class="btn-about" type="button">Less Info</button>
+      </div>
+      <div>
+        <p class="p-editor">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus ullam eius, iure facere tempora consequatur porro laudantium, tempore veniam minima placeat expedita vel accusantium provident, eum architecto reprehenderit
+          autem hic!
+        </p>
+      </div>
+    </section>
+    <section class="[pagework]" id="work">
+      <h1 class="h1-about">Work</h1>
+      <div class="div-work">
+        <p class="p-work">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse facere dolore fugiat fugit architecto ab perspiciatis, exercitationem nesciunt asperiores qui eaque animi deleniti nemo? Atque voluptates aut deleniti temporibus nam
+          ipsam repellendus provident tempora accusamus nulla quas repudiandae earum saepe aliquam, distinctio modi cum nesciunt neque a consectetur vel quam.
+        </p>
+        <div class="img-work">
+          <div class="row-img">
+            <img class="cipa" src="service1.png" alt="Me" />
+            <img class="service2" src="service2.png" alt="Futsal" />
+          </div>
+          <div class="row-img2">
+            <img class="service3" src="service3.png" alt="Soccer" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="pagecontact" id="contact">
+      <h1 class="h1-contact">Contact</h1>
+      <div class="div-contact">
+        <div class="contact-row">
+          <p class="p-contact">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium voluptate deleniti, totam fugiat enim, molestias voluptas quam consequatur vitae earum optio rerum distinctio quidem, sunt maiores? Aut fugiat porro, adipisci
+            ipsa sequi sed eum enim numquam maiores vitae quas. Temporibus cupiditate libero iure expedita culpa porro cum architecto natus assumenda!
+          </p>
+          <div class="contact-icon">
+            <div class="icon1">
+              <a href="https://www.facebook.com/syifara.znh"
+                ><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
+                  <path d="M41,4H9C6.24,4,4,6.24,4,9v32c0,2.76,2.24,5,5,5h32c2.76,0,5-2.24,5-5V9C46,6.24,43.76,4,41,4z M37,19h-2c-2.14,0-3,0.5-3,2 v3h5l-1,5h-4v15h-5V29h-4v-5h4v-3c0-4,2-7,6-7c2.9,0,4,1,4,1V19z"></path></svg></a>
+              <p class="p-icon">Syifa Raudhatul</p>
+            </div>
+            <div class="icon1">
+              <a href="https://www.instagram.com/syifara_znh"
+                ><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 32 32">
+                  <path
+                    d="M 11.46875 5 C 7.917969 5 5 7.914063 5 11.46875 L 5 20.53125 C 5 24.082031 7.914063 27 11.46875 27 L 20.53125 27 C 24.082031 27 27 24.085938 27 20.53125 L 27 11.46875 C 27 7.917969 24.085938 5 20.53125 5 Z M 11.46875 7 L 20.53125 7 C 23.003906 7 25 8.996094 25 11.46875 L 25 20.53125 C 25 23.003906 23.003906 25 20.53125 25 L 11.46875 25 C 8.996094 25 7 23.003906 7 20.53125 L 7 11.46875 C 7 8.996094 8.996094 7 11.46875 7 Z M 21.90625 9.1875 C 21.402344 9.1875 21 9.589844 21 10.09375 C 21 10.597656 21.402344 11 21.90625 11 C 22.410156 11 22.8125 10.597656 22.8125 10.09375 C 22.8125 9.589844 22.410156 9.1875 21.90625 9.1875 Z M 16 10 C 12.699219 10 10 12.699219 10 16 C 10 19.300781 12.699219 22 16 22 C 19.300781 22 22 19.300781 22 16 C 22 12.699219 19.300781 10 16 10 Z M 16 12 C 18.222656 12 20 13.777344 20 16 C 20 18.222656 18.222656 20 16 20 C 13.777344 20 12 18.222656 12 16 C 12 13.777344 13.777344 12 16 12 Z"></path></svg></a>
+              <p class="p-icon">syifara_znh</p>
+            </div>
+            <div class="icon1">
+              <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 50 50">
+                <path
+                  d="M 25 2 C 12.309534 2 2 12.309534 2 25 C 2 29.079097 3.1186875 32.88588 4.984375 36.208984 L 2.0371094 46.730469 A 1.0001 1.0001 0 0 0 3.2402344 47.970703 L 14.210938 45.251953 C 17.434629 46.972929 21.092591 48 25 48 C 37.690466 48 48 37.690466 48 25 C 48 12.309534 37.690466 2 25 2 z M 25 4 C 36.609534 4 46 13.390466 46 25 C 46 36.609534 36.609534 46 25 46 C 21.278025 46 17.792121 45.029635 14.761719 43.333984 A 1.0001 1.0001 0 0 0 14.033203 43.236328 L 4.4257812 45.617188 L 7.0019531 36.425781 A 1.0001 1.0001 0 0 0 6.9023438 35.646484 C 5.0606869 32.523592 4 28.890107 4 25 C 4 13.390466 13.390466 4 25 4 z M 16.642578 13 C 16.001539 13 15.086045 13.23849 14.333984 14.048828 C 13.882268 14.535548 12 16.369511 12 19.59375 C 12 22.955271 14.331391 25.855848 14.613281 26.228516 L 14.615234 26.228516 L 14.615234 26.230469 C 14.588494 26.195329 14.973031 26.752191 15.486328 27.419922 C 15.999626 28.087653 16.717405 28.96464 17.619141 29.914062 C 19.422612 31.812909 21.958282 34.007419 25.105469 35.349609 C 26.554789 35.966779 27.698179 36.339417 28.564453 36.611328 C 30.169845 37.115426 31.632073 37.038799 32.730469 36.876953 C 33.55263 36.755876 34.456878 36.361114 35.351562 35.794922 C 36.246248 35.22873 37.12309 34.524722 37.509766 33.455078 C 37.786772 32.688244 37.927591 31.979598 37.978516 31.396484 C 38.003976 31.104927 38.007211 30.847602 37.988281 30.609375 C 37.969311 30.371148 37.989581 30.188664 37.767578 29.824219 C 37.302009 29.059804 36.774753 29.039853 36.224609 28.767578 C 35.918939 28.616297 35.048661 28.191329 34.175781 27.775391 C 33.303883 27.35992 32.54892 26.991953 32.083984 26.826172 C 31.790239 26.720488 31.431556 26.568352 30.914062 26.626953 C 30.396569 26.685553 29.88546 27.058933 29.587891 27.5 C 29.305837 27.918069 28.170387 29.258349 27.824219 29.652344 C 27.819619 29.649544 27.849659 29.663383 27.712891 29.595703 C 27.284761 29.383815 26.761157 29.203652 25.986328 28.794922 C 25.2115 28.386192 24.242255 27.782635 23.181641 26.847656 L 23.181641 26.845703 C 21.603029 25.455949 20.497272 23.711106 20.148438 23.125 C 20.171937 23.09704 20.145643 23.130901 20.195312 23.082031 L 20.197266 23.080078 C 20.553781 22.728924 20.869739 22.309521 21.136719 22.001953 C 21.515257 21.565866 21.68231 21.181437 21.863281 20.822266 C 22.223954 20.10644 22.02313 19.318742 21.814453 18.904297 L 21.814453 18.902344 C 21.828863 18.931014 21.701572 18.650157 21.564453 18.326172 C 21.426943 18.001263 21.251663 17.580039 21.064453 17.130859 C 20.690033 16.232501 20.272027 15.224912 20.023438 14.634766 L 20.023438 14.632812 C 19.730591 13.937684 19.334395 13.436908 18.816406 13.195312 C 18.298417 12.953717 17.840778 13.022402 17.822266 13.021484 L 17.820312 13.021484 C 17.450668 13.004432 17.045038 13 16.642578 13 z M 16.642578 15 C 17.028118 15 17.408214 15.004701 17.726562 15.019531 C 18.054056 15.035851 18.033687 15.037192 17.970703 15.007812 C 17.906713 14.977972 17.993533 14.968282 18.179688 15.410156 C 18.423098 15.98801 18.84317 16.999249 19.21875 17.900391 C 19.40654 18.350961 19.582292 18.773816 19.722656 19.105469 C 19.863021 19.437122 19.939077 19.622295 20.027344 19.798828 L 20.027344 19.800781 L 20.029297 19.802734 C 20.115837 19.973483 20.108185 19.864164 20.078125 19.923828 C 19.867096 20.342656 19.838461 20.445493 19.625 20.691406 C 19.29998 21.065838 18.968453 21.483404 18.792969 21.65625 C 18.639439 21.80707 18.36242 22.042032 18.189453 22.501953 C 18.016221 22.962578 18.097073 23.59457 18.375 24.066406 C 18.745032 24.6946 19.964406 26.679307 21.859375 28.347656 C 23.05276 29.399678 24.164563 30.095933 25.052734 30.564453 C 25.940906 31.032973 26.664301 31.306607 26.826172 31.386719 C 27.210549 31.576953 27.630655 31.72467 28.119141 31.666016 C 28.607627 31.607366 29.02878 31.310979 29.296875 31.007812 L 29.298828 31.005859 C 29.655629 30.601347 30.715848 29.390728 31.224609 28.644531 C 31.246169 28.652131 31.239109 28.646231 31.408203 28.707031 L 31.408203 28.708984 L 31.410156 28.708984 C 31.487356 28.736474 32.454286 29.169267 33.316406 29.580078 C 34.178526 29.990889 35.053561 30.417875 35.337891 30.558594 C 35.748225 30.761674 35.942113 30.893881 35.992188 30.894531 C 35.995572 30.982516 35.998992 31.07786 35.986328 31.222656 C 35.951258 31.624292 35.8439 32.180225 35.628906 32.775391 C 35.523582 33.066746 34.975018 33.667661 34.283203 34.105469 C 33.591388 34.543277 32.749338 34.852514 32.4375 34.898438 C 31.499896 35.036591 30.386672 35.087027 29.164062 34.703125 C 28.316336 34.437036 27.259305 34.092596 25.890625 33.509766 C 23.114812 32.325956 20.755591 30.311513 19.070312 28.537109 C 18.227674 27.649908 17.552562 26.824019 17.072266 26.199219 C 16.592866 25.575584 16.383528 25.251054 16.208984 25.021484 L 16.207031 25.019531 C 15.897202 24.609805 14 21.970851 14 19.59375 C 14 17.077989 15.168497 16.091436 15.800781 15.410156 C 16.132721 15.052495 16.495617 15 16.642578 15 z"
+                ></path>
+              </svg>
+              <p class="p-icon">085523697652</p>
+            </div>
+          </div>
+        </div>
+        <div class="contact-form">
+          <form class="form" action="">
+            <span>Email adress</span>
+            <input type="email" id="input-contact" name="email" required="" placeholder="example@email.com" />
+            <span>Subject</span>
+            <input type="text" id="input-contact2" required="" placeholder="Your Subject" />
+            <span>Message</span>
+            <input type="text" id="input-contact3" required="" placeholder="Your message" />
+            <div class="btn">
+              <button class="btn-form" type="submit" onclick="tambah()">Submit</button>
+            </div>
+            <script src="main.JS"></script>
+          </form>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
